# mcs

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/mcs-api/: Cargo.toml
crates/mcs-api/src/: auth.rs  challenges.rs  error.rs  extract.rs  history.rs  hub.rs  lib.rs  limits.rs  metrics.rs  openapi.rs  presence.rs  rating.rs  ready.rs  rest.rs  state.rs  table.rs  variants.rs  ws.rs
crates/mcs-api/tests/: auth_flow.rs  challenges.rs  cluster_routing.rs  history.rs  loadtest.rs  openapi.rs  presence.rs  profiles.rs  rate_limiting.rs  ratings.rs  recover.rs  rematch.rs  rest_game.rs  rest_payment.rs  seek_lobby.rs  stats.rs  variants.rs  ws_game.rs  ws_offers.rs  ws_protocol_fuzz.rs  ws_spectator_broadcast.rs  ws_subprotocol_auth.rs
crates/mcs-auth/: Cargo.toml
crates/mcs-auth/src/: challenge.rs  error.rs  lib.rs  session.rs  siwe_verify.rs
crates/mcs-cluster/: Cargo.toml
crates/mcs-cluster/src/: bus.rs  directory.rs  error.rs  lib.rs  redis.rs  redis_bus.rs  registry.rs  types.rs
crates/mcs-cluster/tests/: redis_bus_integration.rs  redis_integration.rs
crates/mcs-core/: Cargo.toml
crates/mcs-core/src/: color.rs  error.rs  lib.rs  payload.rs  registry.rs  session.rs  status.rs
crates/mcs-domain/: Cargo.toml
crates/mcs-domain/src/: challenge.rs  clock.rs  error.rs  evm_address.rs  game.rs  ids.rs  lib.rs  rating.rs  seek.rs  time_control.rs  user.rs
crates/mcs-game/: Cargo.toml
crates/mcs-game/src/: actor.rs  clock.rs  completion.rs  error.rs  event.rs  lib.rs  matchmaking.rs  recovery.rs  spectator.rs  tests.rs  time_source.rs
crates/mcs-game/tests/: recovery.rs
crates/mcs-observability/: Cargo.toml
crates/mcs-observability/src/: config.rs  error.rs  lib.rs  request_id.rs  tests.rs  trace.rs
crates/mcs-payments/: Cargo.toml
crates/mcs-payments/src/: error.rs  facilitator.rs  lib.rs  middleware.rs  store.rs  types.rs  verifier.rs
crates/mcs-rating/: Cargo.toml
crates/mcs-rating/src/: algorithm.rs  convert.rs  lib.rs  score.rs
crates/mcs-server/: Cargo.toml  config.toml
crates/mcs-server/src/: cluster.rs  config.rs  lib.rs  main.rs  metrics.rs  retention.rs
crates/mcs-server/tests/: cluster_redis.rs  cors.rs  failover_redis.rs  http_hardening.rs  limits.rs  observability.rs  recovery.rs  retention.rs  smoke.rs
crates/mcs-storage/: Cargo.toml
crates/mcs-storage/migrations/: 0001_init.sql  0002_ratings.sql  0003_game_snapshot.sql  0004_game_actions.sql  0005_rated.sql  0006_challenges.sql  0007_revoked_tokens.sql  0008_retention_indexes.sql  0009_payments.sql  0010_profiles_rating_history.sql  0011_rating_time_class.sql
crates/mcs-storage/src/: action_log.rs  challenge.rs  error.rs  game.rs  lib.rs  payment.rs  rating.rs  rating_history.rs  repositories.rs  revoked_token.rs  seek.rs  session.rs  sqlx_store.rs  user.rs
crates/mcs-storage/src/tests/: harness.rs  memory.rs  mod.rs  sqlx_backend.rs  sqlx_sqlite.rs
crates/mcs-variant-mcr/: Cargo.toml
crates/mcs-variant-mcr/src/: factory.rs  fog.rs  game.rs  lib.rs  tests.rs  wire.rs
crates/mcs-variant-rbc/: Cargo.toml
crates/mcs-variant-rbc/src/: convert.rs  factory.rs  game.rs  lib.rs  tests.rs  wire.rs
crates/mcs-variant-shakmaty/: Cargo.toml
crates/mcs-variant-shakmaty/src/: factory.rs  game.rs  lib.rs  spec.rs  tests.rs  variants.rs  wire.rs
crates/mcs-variant-standard/: Cargo.toml
crates/mcs-variant-standard/src/: factory.rs  game.rs  lib.rs  tests.rs  wire.rs
crates/mcs-variant-standard/tests/: action_decode_fuzz.rs
ops/: README.md  RUNBOOK.md
ops/grafana/: mcs-overview.json
ops/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml
ops/prometheus/: alerts.yml  prometheus.yml
ops/proxy/: Caddyfile
