[package]
name = "mcs-api"
description = "HTTP API layer for the MCS server: unified error type, RFC 9457 problem+json responses, and the ApiResult alias."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
mcs-domain.workspace = true
mcs-storage.workspace = true
mcs-auth.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
