[package]
name = "mcs-api"
description = "HTTP API layer for the MCS server: unified error type, RFC 9457 problem+json responses, and the ApiResult alias."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
mcs-domain.workspace = true
mcs-storage.workspace = true
mcs-auth.workspace = true
mcs-game.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
time.workspace = true
hex = "0.4"
# EIP-4361 message parser, used to read back the exact nonce the wallet signed.
# Matches the parser inside `mcs-auth` (default features only: no async EIP-1271).
siwe = { version = "0.6.1", default-features = false }

[dev-dependencies]
# Drive the router in-process without binding a socket.
tokio = { workspace = true }
tower = { workspace = true }
# The concrete SQLite-backed storage used as the integration-test backend.
mcs-storage = { workspace = true, features = ["sqlite"] }
# Local test signer: derive an address from a fixed private key and produce
# EIP-191 personal-sign signatures over the SIWE challenge, mirroring a wallet.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = "0.10"
# The standard-chess variant, used to spawn a real game session in WS tests.
mcs-variant-standard = { workspace = true }
# A real WebSocket client to exercise the live-game socket end to end.
tokio-tungstenite = "0.24"
# `SinkExt`/`StreamExt` for driving the tungstenite client stream in tests.
futures = { workspace = true }
