[package]
name = "mcs-auth"
description = "Storage-agnostic Sign-In with Ethereum (EIP-4361) login and JWT session logic for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Internal + workspace-shared dependencies.
mcs-domain.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
rand.workspace = true
uuid.workspace = true

# Sign-In with Ethereum (EIP-4361) parser + EIP-191 signature recovery.
# Not part of the workspace dependency set, so it is pinned explicitly here.
# Default features only: this pulls in `k256` for pure, synchronous ECDSA
# recovery and deliberately AVOIDS the `ethers` feature (which would add an
# async, network-querying EIP-1271 code path). This crate stays IO-free.
siwe = { version = "0.6.1", default-features = false }

[dev-dependencies]
# Local test signer: derive an address from a fixed private key and produce
# EIP-191 personal-sign signatures over known message vectors.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = "0.12"
hex = "0.4"
