[package]
name = "mcs-domain"
description = "Pure domain entities and value objects for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
