[package]
name = "mcs-game"
description = "Per-game async session actor for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
mcs-domain.workspace = true
mcs-storage.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
mcs-variant-standard.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
