[package]
name = "mcs-game"
description = "Per-game async session actor for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
mcs-domain.workspace = true
# Only the backend-agnostic repository traits/types are used here, so disable
# the default `sqlite` backend feature: it must not be force-enabled on the
# shared `mcs-storage` crate, or it would leak (via Cargo feature unification)
# into the Postgres-only server build and silently select the SQLite backend.
# A `path` dep is required because `default-features = false` is ignored when a
# dependency is inherited via `workspace = true`.
mcs-storage = { path = "../mcs-storage", default-features = false }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
mcs-variant-standard.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
