[package]
name = "mcs-observability"
description = "Tracing/logging initialisation and HTTP request-tracing middleware for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
http = "1"
