[package]
name = "mcs-payments"
description = "x402 payment-required protocol types and axum middleware for MCS gated resources."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tower.workspace = true

# base64 encoding/decoding for the X-PAYMENT header value.
base64 = "0.22"

[dev-dependencies]
tokio.workspace = true
