[package]
name = "mcs-payments"
description = "x402 payment-required protocol types and axum middleware for MCS gated resources."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# A production [`FacilitatorVerifier`] that calls a real x402 facilitator's
# `/verify` + `/settle` HTTP endpoints. Off by default so the core crate builds
# with no HTTP client; the server enables it (see `mcs-server`).
facilitator = ["dep:reqwest"]

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tower.workspace = true

# base64 encoding/decoding for the X-PAYMENT header value.
base64 = "0.22"

# SHA-256 for the content-hash fallback of the idempotency key (#108).
sha2 = "0.10"

# Timestamps on persisted `PaymentRecord`s. The `serde` derive on `PaymentRecord`
# needs the `serde` feature; `formatting`/`parsing` cover the RFC 3339 round-trip
# the storage backend performs. Matches the workspace `time` feature set.
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# HTTP client for the optional facilitator-backed verifier. Pulled in only under
# the `facilitator` feature; rustls (no system OpenSSL) keeps the build portable.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tokio.workspace = true
# Stand up an in-process mock facilitator to exercise the verify/settle flow.
wiremock = "0.6"
