[package]
name = "mcs-rating"
description = "Glicko-2 rating engine for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]
domain = ["dep:mcs-domain", "serde"]

[dependencies]
serde = { workspace = true, optional = true }
mcs-domain = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
