[package]
name = "mcs-server"
description = "The runnable MCS binary: loads layered configuration, wires storage, variants, auth, and the HTTP API together, and serves it with graceful shutdown."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mcs-server"
path = "src/main.rs"

[dependencies]
mcs-api.workspace = true
mcs-storage.workspace = true
mcs-core.workspace = true
mcs-auth.workspace = true
# Recover in-progress games at startup: `recover_game` rebuilds each unfinished
# game's live actor from its durable action log (#58).
mcs-game.workspace = true
mcs-domain.workspace = true
# This binary is the single place variants are registered at startup, which
# keeps `mcs-api` variant-agnostic. All supported variants are wired in here.
mcs-variant-standard.workspace = true
mcs-variant-rbc = { path = "../mcs-variant-rbc" }
mcs-variant-shakmaty = { path = "../mcs-variant-shakmaty" }
# `mcs-observability` is intentionally referenced by path: it is a leaf
# observability crate not (yet) listed in `[workspace.dependencies]`, and adding
# it there would mean editing the root manifest, which this crate must not do.
mcs-observability = { path = "../mcs-observability" }
# x402 payment middleware. Referenced by path: not in `[workspace.dependencies]`,
# and member path deps are allowed (only the root manifest is off-limits). Used
# to build the optional game-creation payment gate from `[payments]` config. The
# `facilitator` feature is enabled so the composition root can construct a real
# facilitator-backed verifier (#87) when `[payments].verifier = "facilitator"`.
mcs-payments = { path = "../mcs-payments", features = ["facilitator"] }
# Clustering primitives for multi-node support (#68). The server is the single
# place the Redis-backed registry is constructed, so it enables the `redis`
# feature here. Cluster mode is off by default; with it disabled no Redis
# connection is opened and the state stays single-node/local.
mcs-cluster = { path = "../mcs-cluster", features = ["redis"] }

axum.workspace = true
tokio.workspace = true
# Compose the observability Tower layers (request-id + HTTP trace) into a stack.
tower.workspace = true
figment.workspace = true
serde.workspace = true
tracing.workspace = true
time.workspace = true
anyhow.workspace = true
rand.workspace = true
# Generate a stable-per-process node id when `[cluster].node_id` is unset.
uuid.workspace = true

[dev-dependencies]
# Drive the assembled router in-process without binding a socket.
tower = { workspace = true }
# Parse the JSON body of `/variants` in smoke tests.
serde_json.workspace = true
# `figment::Jail` for isolated config-loading tests (the `test` feature gates it).
figment = { workspace = true, features = ["test"] }