[package]
name = "mcs-server"
description = "The runnable MCS binary: loads layered configuration, wires storage, variants, auth, and the HTTP API together, and serves it with graceful shutdown."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mcs-server"
path = "src/main.rs"

[features]
# Select the storage backend at build time. Exactly one should be active; the
# default is SQLite (single-file, in-memory tests). Building a Postgres-only
# binary is `--no-default-features --features postgres`, which produces the
# production Postgres image (see Dockerfile `DB_BACKEND=postgres`).
default = ["sqlite"]
sqlite = ["mcs-storage/sqlite"]
postgres = ["mcs-storage/postgres"]

[dependencies]
mcs-api.workspace = true
# Referenced by `path` (not `workspace = true`) specifically so we can set
# `default-features = false`: the root `[workspace.dependencies]` entry does not
# disable defaults, and Cargo *ignores* a member's `default-features = false`
# when it inherits via `workspace = true`. A direct path dep lets the backend be
# chosen by this crate's own `sqlite` / `postgres` features (re-exported above)
# rather than always pulling in SQLite — so `--no-default-features --features
# postgres` yields a Postgres-only binary. Member path deps are permitted; only
# the root manifest is off-limits.
mcs-storage = { path = "../mcs-storage", default-features = false }
mcs-core.workspace = true
mcs-auth.workspace = true
# Recover in-progress games at startup: `recover_game` rebuilds each unfinished
# game's live actor from its durable action log (#58).
mcs-game.workspace = true
mcs-domain.workspace = true
# This binary is the single place variants are registered at startup, which
# keeps `mcs-api` variant-agnostic. All supported variants are wired in here.
mcs-variant-rbc = { path = "../mcs-variant-rbc" }
# `mcs-variant-mcr` registers mcr's whole catalog — the single gameplay engine
# since #155 (standard and Chess960 included), minus the hidden-information and
# phased variants deferred to #156.
mcs-variant-mcr = { path = "../mcs-variant-mcr" }
# `mcs-observability` is intentionally referenced by path: it is a leaf
# observability crate not (yet) listed in `[workspace.dependencies]`, and adding
# it there would mean editing the root manifest, which this crate must not do.
mcs-observability = { path = "../mcs-observability" }
# x402 payment middleware. Referenced by path: not in `[workspace.dependencies]`,
# and member path deps are allowed (only the root manifest is off-limits). Used
# to build the optional game-creation payment gate from `[payments]` config. The
# `facilitator` feature is enabled so the composition root can construct a real
# facilitator-backed verifier (#87) when `[payments].verifier = "facilitator"`.
mcs-payments = { path = "../mcs-payments", features = ["facilitator"] }
# Clustering primitives for multi-node support (#68). The server is the single
# place the Redis-backed registry is constructed, so it enables the `redis`
# feature here. Cluster mode is off by default; with it disabled no Redis
# connection is opened and the state stays single-node/local.
mcs-cluster = { path = "../mcs-cluster", features = ["redis"] }

axum.workspace = true
tokio.workspace = true
# Compose the observability Tower layers (request-id + HTTP trace) into a stack.
tower.workspace = true
# Security headers, request timeout, and body-size limiting (#99). The
# workspace dep enables `trace`, `cors`, and `request-id`; `set-header`,
# `timeout`, and `limit` are needed here and enabled on this crate's own
# reference (the root manifest must not be edited per project rules).
tower-http = { workspace = true, features = ["set-header", "timeout", "limit"] }
figment.workspace = true
serde.workspace = true
tracing.workspace = true
time.workspace = true
anyhow.workspace = true
rand.workspace = true
# Generate a stable-per-process node id when `[cluster].node_id` is unset.
uuid.workspace = true
# Prometheus metrics (#88). The composition root owns the exporter: it installs
# the `metrics-exporter-prometheus` recorder as the global `metrics` sink and
# renders it at `GET /metrics`. Pinned directly here (not in the workspace set;
# member version deps are allowed, only the root manifest is off-limits).
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# CancellationToken for the retention task's graceful-shutdown wiring (#107).
# Pinned directly here (not in the workspace set; member version deps are allowed,
# only the root manifest is off-limits).
tokio-util = { version = "0.7", default-features = false }

[dev-dependencies]
# Drive the assembled router in-process without binding a socket.
tower = { workspace = true }
tower-http.workspace = true
# Parse the JSON body of `/variants` in smoke tests.
serde_json.workspace = true
# Drive the event-bus subscription stream in the Redis spectator-broadcast test.
tokio-stream = { workspace = true }
# `figment::Jail` for isolated config-loading tests (the `test` feature gates it).
figment = { workspace = true, features = ["test"] }
# The readiness 503 test breaks the DB by dropping a table on the live pool
# (via `SqlxStorage::pool`), so it needs a raw `sqlx` query handle.
sqlx = { workspace = true }
tokio = { workspace = true }