[package]
name = "mcs-variant-mcr"
description = "The mcr fairy-variant catalog as MCS variants, backed by the mcr rules library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
# `mcr` is a clean-room chess-rules library (MIT OR Apache-2.0) covering standard
# chess, Chess960, and 100+ fairy variants. It is not yet published to crates.io,
# so it is pulled from its public source repository, pinned to its default branch.
# Default features (`std`) are used. Pinned here rather than in the workspace
# `[workspace.dependencies]`, following the `rbc-rs` precedent: it is used only by
# this crate, so keeping it member-local leaves the root manifest untouched and
# parallel crate work conflict-free.
mcr = { git = "https://github.com/ywzvennu/mcr", branch = "main" }
