[package]
name = "mcs-variant-shakmaty"
description = "The shakmaty variant family (Atomic, Antichess, Crazyhouse, King of the Hill, Three-check, Racing Kings, Horde, Chess960) for the MCS server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mcs-core.workspace = true
# The `variant` feature pulls in the Atomic/Antichess/… position types; a member
# crate may add features on top of the workspace-pinned version.
shakmaty = { workspace = true, features = ["variant"] }
serde.workspace = true
serde_json.workspace = true
